<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="Sensor_brands" Id="{57bbc7cd-3b23-4825-aa87-6a5efe5db7d1}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE Sensor_brands:
(
	Sick,
	PilZ,
	Parker:=3,
	Bosch 
)SINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>